--- a/yamls/emed.yaml
+++ b/yamls/emed.yaml
@@ -821,6 +821,7 @@ jobs:
         type: group
         label: SLURM Configuration
         hidden: ${{ inputs.submit_to_scheduler != true || inputs.resource.schedulerType != 'slurm' }}
+        collapsed: true
         items:
           is_disabled:
             type: boolean
@@ -930,6 +931,7 @@ jobs:
         type: group
         label: PBS Configuration
         hidden: ${{ inputs.submit_to_scheduler != true || inputs.resource.schedulerType != 'pbs' }}
+        collapsed: true
         items:
           is_disabled:
             type: boolean
