Collapse scheduler sections in workflow

--- a/workflow.yaml
+++ b/workflow.yaml
@@ -789,6 +789,7 @@ jobs:
         type: group
         label: SLURM Configuration
         hidden: ${{ inputs.submit_to_scheduler != true || inputs.resource.schedulerType != 'slurm' }}
+        collapsed: true
         items:
           is_disabled:
             type: boolean
@@ -865,6 +866,7 @@ jobs:
         type: group
         label: PBS Configuration
         hidden: ${{ inputs.submit_to_scheduler != true || inputs.resource.schedulerType != 'pbs' }}
+        collapsed: true
         items:
           is_disabled:
             type: boolean
