--- a/yamls/hsp.yaml
+++ b/yamls/hsp.yaml
@@ -1107,7 +1107,7 @@ jobs:
           embedding_model_source:
             label: Embedding Model Source
             type: dropdown
-            default: bucket
+            default: huggingface
             tooltip: How to load the embedding model for RAG
             options:
               - value: local
