--- a/yamls/emed.yaml
+++ b/yamls/emed.yaml
@@ -643,13 +643,12 @@ jobs:
   # Run Service (using marketplace job_runner)
   # ============================================================================
   run_service:
-    needs: [setup, prepare_containers, prepare_model, prepare_embedding_model, prepare_tiktoken, derive_scheduler]
     working-directory: ${{ needs.setup.outputs.rundir }}
+    needs: [setup, prepare_containers, prepare_model, prepare_embedding_model, prepare_tiktoken, derive_scheduler]
     ssh:
       remoteHost: ${{ inputs.resource.ip }}
     steps:
-      - name: Run Service
-        uses: marketplace/job_runner/v4.0
+      - uses: marketplace/script_submitter/v3.5
         early-cancel: any-job-failed
         with:
           resource: ${{ inputs.resource }}
@@ -658,26 +657,20 @@ jobs:
           use_existing_script: true
           script_path: ${{ needs.setup.outputs.rundir }}/start_service.sh
           scheduler: ${{ inputs.submit_to_scheduler }}
-          inject_markers: true
           slurm:
-            is_disabled: ${{ inputs.submit_to_scheduler != true || inputs.resource.schedulerType != 'slurm' }}
-            account: ${{ inputs.slurm.account }}
-            partition: ${{ needs.derive_scheduler.outputs.slurm_partition }}
-            qos: ${{ inputs.slurm.qos }}
-            time: ${{ inputs.slurm.time }}
+            is_disabled: ${{ inputs.resource.provider == 'existing' && inputs.resource.schedulerType != 'slurm' || inputs.submit_to_scheduler == false }}
+            slurm_options: ${{ inputs.slurm.slurm_options }}
+            partition_default: ${{ inputs.slurm.partition_default }}
+            partition_hpc4: ${{ inputs.slurm.partition_hpc4 }}
             cpus_per_task: ${{ inputs.slurm.cpus_per_task }}
-            gres: ${{ needs.derive_scheduler.outputs.slurm_gres }}
-            scheduler_directives: |
-              ${{ needs.derive_scheduler.outputs.slurm_directives }}
-              ${{ inputs.slurm.scheduler_directives }}
+            mem: ${{ inputs.slurm.mem }}
+            gres_gpu_default: ${{ inputs.slurm.gres_gpu_default }}
+            gres_gpu_hpc4: ${{ inputs.slurm.gres_gpu_hpc4 }}
+            time: ${{ inputs.slurm.time }}
+            scheduler_directives: ${{ inputs.slurm.scheduler_directives }}
           pbs:
-            is_disabled: ${{ inputs.submit_to_scheduler != true || inputs.resource.schedulerType != 'pbs' }}
-            account: ${{ inputs.pbs.account }}
-            queue: ${{ inputs.pbs.queue }}
-            walltime: ${{ inputs.pbs.walltime }}
-            select: ${{ inputs.pbs.select }}
-            scheduler_directives: |
-              ${{ inputs.pbs.scheduler_directives }}
+            is_disabled: ${{ inputs.resource.schedulerType != 'pbs' || inputs.submit_to_scheduler == false }}
+            scheduler_directives: ${{ inputs.pbs.scheduler_directives }}
 
   # ============================================================================
   # Session Management
@@ -915,112 +908,114 @@ jobs:
       # ========================================================================
       # SLURM Configuration
       # ========================================================================
-      slurm:
-        type: group
-        label: SLURM Configuration
-        hidden: ${{ inputs.submit_to_scheduler != true || inputs.resource.schedulerType != 'slurm' }}
-        collapsed: true
-        items:
-          is_disabled:
-            type: boolean
-            default: ${{ inputs.submit_to_scheduler != true || inputs.resource.schedulerType != 'slurm' }}
-            hidden: true
-
-          cluster:
-            type: dropdown
-            label: SLURM Cluster
-            default: default
-            options:
-              - value: default
-                label: Default
-              - value: hpc4
-                label: HPC4 (-M hpc4)
-            ignore: ${{ inputs.submit_to_scheduler != true || inputs.resource.schedulerType != 'slurm' }}
-          
-          account:
-            label: Account
-            type: slurm-accounts
-            resource: ${{ inputs.resource }}
-            tooltip: SLURM account for job submission (--account)
-            optional: true
-            ignore: ${{ inputs.submit_to_scheduler != true || inputs.resource.schedulerType != 'slurm' }}
-          
-          partition:
-            type: slurm-partitions
-            label: Partition
-            optional: true
-            resource: ${{ inputs.resource }}
-            tooltip: Partition for job submission (--partition)
-            hidden: ${{ inputs.slurm.cluster == 'hpc4' }}
-            ignore: ${{ inputs.slurm.cluster == 'hpc4' || inputs.submit_to_scheduler != true || inputs.resource.schedulerType != 'slurm' }}
-
-          partition_hpc4:
-            type: dropdown
-            label: Partition (HPC4)
-            optional: true
-            tooltip: Partition for HPC4 (-M hpc4)
-            default: normal
-            options: [normal, gpu, gpu-h200, gpu-quick, ht, large-mem, quick, test, unlimited]
-            hidden: ${{ inputs.slurm.cluster != 'hpc4' }}
-            ignore: ${{ inputs.slurm.cluster != 'hpc4' || inputs.submit_to_scheduler != true || inputs.resource.schedulerType != 'slurm' }}
-          
-          qos:
-            label: Quality of Service (QoS)
-            type: slurm-qos
-            resource: ${{ inputs.resource }}
-            tooltip: SLURM QoS setting (--qos)
-            optional: true
-            ignore: ${{ inputs.submit_to_scheduler != true || inputs.resource.schedulerType != 'slurm' }}
-          
-          cpus_per_task:
-            type: number
-            label: CPUs per Task
-            min: 1
-            max: 256
-            default: 1
-            tooltip: Number of CPUs for the job (--cpus-per-task)
-            ignore: ${{ inputs.submit_to_scheduler != true || inputs.resource.schedulerType != 'slurm' }}
-          
-          time:
-            label: Walltime
-            type: string
-            default: 01:00:00
-            tooltip: Maximum job duration, e.g., 04:00:00 (--time)
-            ignore: ${{ inputs.submit_to_scheduler != true || inputs.resource.schedulerType != 'slurm' }}
-          
-          gres:
-            label: GPUs (gres)
-            type: dropdown
-            default: "gpu:4"
-            tooltip: GPU resource specification (--gres). Keep in sync with vLLM GPU count.
-            options:
-              - value: "gpu:1"
-                label: "1 GPU (gpu:1)"
-              - value: "gpu:2"
-                label: "2 GPUs (gpu:2)"
-              - value: "gpu:4"
-                label: "4 GPUs (gpu:4)"
-              - value: "gpu:8"
-                label: "8 GPUs (gpu:8)"
-            hidden: ${{ inputs.slurm.cluster == 'hpc4' }}
-            ignore: ${{ inputs.slurm.cluster == 'hpc4' || inputs.submit_to_scheduler != true || inputs.resource.schedulerType != 'slurm' }}
-
-          gres_gpu_hpc4:
-            type: number
-            label: Number of GPUs (HPC4)
-            min: 1
-            max: 4
-            default: 4
-            tooltip: GPUs per node for HPC4 (mapped to --gres=gpu:X)
-            hidden: ${{ inputs.slurm.cluster != 'hpc4' }}
-            ignore: ${{ inputs.slurm.cluster != 'hpc4' || inputs.submit_to_scheduler != true || inputs.resource.schedulerType != 'slurm' }}
-          
-          scheduler_directives:
-            type: editor
-            label: Additional Directives
-            optional: true
-            tooltip: Additional SLURM directives (include #SBATCH prefix)
-            ignore: ${{ inputs.submit_to_scheduler != true || inputs.resource.schedulerType != 'slurm' }}
+          slurm:
+            type: group
+            label: SLURM Directives
+            hidden: ${{ inputs.resource.provider == 'existing' && inputs.resource.schedulerType != 'slurm' || inputs.submit_to_scheduler == false }}
+            ignore: ${{ inputs.resource.provider == 'existing' && inputs.resource.schedulerType != 'slurm' || inputs.submit_to_scheduler == false }}
+            items:
+              slurm_options:
+                type: dropdown
+                label: Select Cluster
+                optional: true
+                default: ''
+                options:
+                  - value: ''
+                    label: Default
+                  - value: '-M hpc4'
+                    label: HPC4
+              is_disabled:
+                type: boolean
+                hidden: true
+                default: ${{ inputs.resource.provider == 'existing' && inputs.resource.schedulerType != 'slurm' || inputs.submit_to_scheduler == false }}
+                label: Is SLURM disabled?
+              partition_default:
+                type: slurm-partitions
+                label: SLURM partition
+                ignore: ${{ '-M hpc4' == inputs.slurm.slurm_options }}
+                hidden: ${{ .ignore }}
+                optional: true
+                resource: ${{ inputs.resource }}
+                tooltip: Select a partition from the drop down menu. Leave empty to let SLURM pick a partition.
+              partition_hpc4:
+                type: dropdown
+                label: SLURM partition
+                optional: true
+                tooltip: Select a partition from the drop down menu. Leave empty to let SLURM pick a partition.
+                ignore: ${{ '-M hpc4' != inputs.slurm.slurm_options }}
+                hidden: ${{ .ignore }}
+                default: normal
+                options:
+                  - normal
+                  - gpu
+                  - gpu-h200
+                  - gpu-quick
+                  - ht
+                  - large-mem
+                  - quick
+                  - test
+                  - unlimited
+              cpus_per_task:
+                type: number
+                label: CPUs per task
+                min: 1
+                max: 32
+                default: 1
+                tooltip: '--cpus-per-task=value slurm directive'
+                ignore: ${{ 'existing' != inputs.resource.provider }}
+                hidden: ${{ .ignore }}
+              mem:
+                type: string
+                label: Minimum total memory required
+                default: 8GB
+                tooltip: '--mem=value slurm directive'
+                hidden: ${{ 'existing' != inputs.resource.provider }}
+                ignore: ${{ .hidden }}
+                optional: true
+              gres_gpu_default:
+                type: number
+                label: Number of GPUs
+                ignore: ${{ ( inputs.slurm.partition_default != 'gpu' && inputs.slurm.partition_default != 'gpu-quick' ) || 'existing' != inputs.resource.provider  }}
+                hidden: ${{ .ignore }}
+                min: 1
+                max: 4
+                default: 4
+                tooltip: '--gres=gpu:X slurm directive'
+              gres_gpu_hpc4:
+                type: number
+                label: Number of GPUs
+                hidden: ${{ ( inputs.slurm.partition_hpc4 != 'gpu' && inputs.slurm.partition_hpc4 != 'gpu-quick' && inputs.slurm.partition_hpc4 != 'gpu-h200' ) || 'existing' != inputs.resource.provider  }}
+                ignore: ${{ .hidden }}
+                optional: ${{ .hidden }}
+                min: 1
+                max: 4
+                default: 4
+                tooltip: '--gres=gpu:X slurm directive'
+              time:
+                label: Walltime
+                type: string
+                default: '01:00:00'
+                tooltip: '--time= SLURM directive to set the maximum wall-clock time limit for the job'
+              scheduler_directives:
+                type: editor
+                optional: true
+                tooltip: |
+                  Type in additional scheduler directives. 
+          pbs:
+            type: group
+            label: PBS Directives
+            hidden: ${{ inputs.resource.schedulerType != 'pbs' || inputs.submit_to_scheduler == false }}
+            ignore: ${{ inputs.resource.schedulerType != 'pbs' || inputs.submit_to_scheduler == false }}
+            items:
+              is_disabled:
+                type: boolean
+                hidden: true
+                default: ${{ inputs.resource.schedulerType != 'pbs' || inputs.submit_to_scheduler == false }}
+                label: Is PBS disabled?
+              scheduler_directives:
+                label: Scheduler Directives
+                type: editor
+                tooltip: Type the PBS scheduler directives
 
       # ========================================================================
       # PBS Configuration
