--- a/yamls/emed.yaml
+++ b/yamls/emed.yaml
@@ -150,6 +150,7 @@ jobs:
         early-cancel: any-job-failed
         run: |
           set -x
+          module load singularity || module load apptainer
           command -v singularity >/dev/null 2>&1 || command -v apptainer >/dev/null 2>&1 || { echo "ERROR: singularity/apptainer not found"; exit 1; }
           singularity --version || apptainer --version
           echo "Singularity/Apptainer ready"
@@ -636,7 +637,9 @@ jobs:
             gres_gpu_default: ${{ inputs.vllm.num_gpus }}
             gres_gpu_hpc4: ${{ inputs.vllm.num_gpus }}
             time: ${{ inputs.slurm.time }}
-            scheduler_directives: ${{ inputs.slurm.scheduler_directives }}
+            scheduler_directives: |
+              ${{ inputs.slurm.scheduler_directives }}
+              module load singularity || module load apptainer
           pbs:
             is_disabled: ${{ inputs.resource.schedulerType != 'pbs' || inputs.submit_to_scheduler == false }}
             scheduler_directives: ${{ inputs.pbs.scheduler_directives }}
@@ -915,15 +918,9 @@ jobs:
                 hidden: ${{ .ignore }}
                 default: normal
                 options:
-                  - normal
                   - gpu
                   - gpu-h200
                   - gpu-quick
-                  - ht
-                  - large-mem
-                  - quick
-                  - test
-                  - unlimited
               cpus_per_task:
                 type: number
                 label: CPUs per task
