--- a/yamls/emed.yaml
+++ b/yamls/emed.yaml
@@ -637,8 +637,7 @@ jobs:
             gres_gpu_default: ${{ inputs.vllm.num_gpus }}
             gres_gpu_hpc4: ${{ inputs.vllm.num_gpus }}
             time: ${{ inputs.slurm.time }}
-            scheduler_directives: |
-              ${{ inputs.slurm.scheduler_directives }}
+            scheduler_directives: ${{ inputs.slurm.scheduler_directives }}
               module load singularity || module load apptainer
           pbs:
             is_disabled: ${{ inputs.resource.schedulerType != 'pbs' || inputs.submit_to_scheduler == false }}
@@ -880,139 +879,89 @@ jobs:
       # ========================================================================
       # SLURM Configuration
       # ========================================================================
-          slurm:
-            type: group
-            label: SLURM Directives
-            hidden: ${{ inputs.resource.provider == 'existing' && inputs.resource.schedulerType != 'slurm' || inputs.submit_to_scheduler == false }}
-            ignore: ${{ inputs.resource.provider == 'existing' && inputs.resource.schedulerType != 'slurm' || inputs.submit_to_scheduler == false }}
-            items:
-              slurm_options:
-                type: dropdown
-                label: Select Cluster
-                optional: true
-                default: ''
-                options:
-                  - value: ''
-                    label: Default
-                  - value: '-M hpc4'
-                    label: HPC4
-              is_disabled:
-                type: boolean
-                hidden: true
-                default: ${{ inputs.resource.provider == 'existing' && inputs.resource.schedulerType != 'slurm' || inputs.submit_to_scheduler == false }}
-                label: Is SLURM disabled?
-              partition_default:
-                type: slurm-partitions
-                label: SLURM partition
-                ignore: ${{ '-M hpc4' == inputs.slurm.slurm_options }}
-                hidden: ${{ .ignore }}
-                optional: true
-                resource: ${{ inputs.resource }}
-                tooltip: Select a partition from the drop down menu. Leave empty to let SLURM pick a partition.
-              partition_hpc4:
-                type: dropdown
-                label: SLURM partition
-                optional: true
-                tooltip: Select a partition from the drop down menu. Leave empty to let SLURM pick a partition.
-                ignore: ${{ '-M hpc4' != inputs.slurm.slurm_options }}
-                hidden: ${{ .ignore }}
-                default: normal
-                options:
-                  - gpu
-                  - gpu-h200
-                  - gpu-quick
-              cpus_per_task:
-                type: number
-                label: CPUs per task
-                min: 1
-                max: 32
-                default: 1
-                tooltip: '--cpus-per-task=value slurm directive'
-                ignore: ${{ 'existing' != inputs.resource.provider }}
-                hidden: ${{ .ignore }}
-              mem:
-                type: string
-                label: Minimum total memory required
-                default: 8GB
-                tooltip: '--mem=value slurm directive'
-                hidden: ${{ 'existing' != inputs.resource.provider }}
-                ignore: ${{ .hidden }}
-                optional: true
-              time:
-                label: Walltime
-                type: string
-                default: '01:00:00'
-                tooltip: '--time= SLURM directive to set the maximum wall-clock time limit for the job'
-              scheduler_directives:
-                type: editor
-                optional: true
-                tooltip: |
-                  Type in additional scheduler directives. 
-          pbs:
-            type: group
-            label: PBS Directives
-            hidden: ${{ inputs.resource.schedulerType != 'pbs' || inputs.submit_to_scheduler == false }}
-            ignore: ${{ inputs.resource.schedulerType != 'pbs' || inputs.submit_to_scheduler == false }}
-            items:
-              is_disabled:
-                type: boolean
-                hidden: true
-                default: ${{ inputs.resource.schedulerType != 'pbs' || inputs.submit_to_scheduler == false }}
-                label: Is PBS disabled?
-              scheduler_directives:
-                label: Scheduler Directives
-                type: editor
-                tooltip: Type the PBS scheduler directives
-
-      # ========================================================================
-      # PBS Configuration
-      # ========================================================================
+      slurm:
+        type: group
+        label: SLURM Directives
+        hidden: ${{ inputs.resource.provider == 'existing' && inputs.resource.schedulerType != 'slurm' || inputs.submit_to_scheduler == false }}
+        ignore: ${{ inputs.resource.provider == 'existing' && inputs.resource.schedulerType != 'slurm' || inputs.submit_to_scheduler == false }}
+        items:
+          slurm_options:
+            type: dropdown
+            label: Select Cluster
+            optional: true
+            default: ''
+            options:
+              - value: ''
+                label: Default
+              - value: '-M hpc4'
+                label: HPC4
+          is_disabled:
+            type: boolean
+            hidden: true
+            default: ${{ inputs.resource.provider == 'existing' && inputs.resource.schedulerType != 'slurm' || inputs.submit_to_scheduler == false }}
+            label: Is SLURM disabled?
+          partition_default:
+            type: slurm-partitions
+            label: SLURM partition
+            ignore: ${{ '-M hpc4' == inputs.slurm.slurm_options }}
+            hidden: ${{ .ignore }}
+            optional: true
+            resource: ${{ inputs.resource }}
+            tooltip: Select a partition from the drop down menu. Leave empty to let SLURM pick a partition.
+          partition_hpc4:
+            type: dropdown
+            label: SLURM partition
+            optional: true
+            tooltip: Select a partition from the drop down menu. Leave empty to let SLURM pick a partition.
+            ignore: ${{ '-M hpc4' != inputs.slurm.slurm_options }}
+            hidden: ${{ .ignore }}
+            default: normal
+            options:
+              - gpu
+              - gpu-h200
+              - gpu-quick
+          cpus_per_task:
+            type: number
+            label: CPUs per task
+            min: 1
+            max: 32
+            default: 1
+            tooltip: '--cpus-per-task=value slurm directive'
+            ignore: ${{ 'existing' != inputs.resource.provider }}
+            hidden: ${{ .ignore }}
+          mem:
+            type: string
+            label: Minimum total memory required
+            default: 8GB
+            tooltip: '--mem=value slurm directive'
+            hidden: ${{ 'existing' != inputs.resource.provider }}
+            ignore: ${{ .hidden }}
+            optional: true
+          time:
+            label: Walltime
+            type: string
+            default: '01:00:00'
+            tooltip: '--time= SLURM directive to set the maximum wall-clock time limit for the job'
+          scheduler_directives:
+            type: editor
+            optional: true
+            tooltip: |
+              Type in additional scheduler directives. 
       pbs:
         type: group
-        label: PBS Configuration
-        hidden: ${{ inputs.submit_to_scheduler != true || inputs.resource.schedulerType != 'pbs' }}
-        collapsed: true
+        label: PBS Directives
+        hidden: ${{ inputs.resource.schedulerType != 'pbs' || inputs.submit_to_scheduler == false }}
+        ignore: ${{ inputs.resource.schedulerType != 'pbs' || inputs.submit_to_scheduler == false }}
         items:
           is_disabled:
             type: boolean
-            default: ${{ inputs.submit_to_scheduler != true || inputs.resource.schedulerType != 'pbs' }}
             hidden: true
-          
-          account:
-            label: Account
-            type: string
-            optional: true
-            tooltip: PBS account for job submission (-A)
-            ignore: ${{ inputs.submit_to_scheduler != true || inputs.resource.schedulerType != 'pbs' }}
-          
-          queue:
-            label: Queue
-            type: string
-            optional: true
-            tooltip: PBS queue name (-q)
-            ignore: ${{ inputs.submit_to_scheduler != true || inputs.resource.schedulerType != 'pbs' }}
-          
-          walltime:
-            label: Walltime
-            type: string
-            default: 04:00:00
-            tooltip: Maximum job duration, e.g., 04:00:00 (-l walltime=)
-            ignore: ${{ inputs.submit_to_scheduler != true || inputs.resource.schedulerType != 'pbs' }}
-          
-          select:
-            label: Resource Selection
-            type: string
-            default: "1:ncpus=8:ngpus=1"
-            placeholder: "1:ncpus=8:ngpus=1"
-            tooltip: PBS resource selection string, e.g., 1:ncpus=8:ngpus=1 (-l select=)
-            ignore: ${{ inputs.submit_to_scheduler != true || inputs.resource.schedulerType != 'pbs' }}
-          
+            default: ${{ inputs.resource.schedulerType != 'pbs' || inputs.submit_to_scheduler == false }}
+            label: Is PBS disabled?
           scheduler_directives:
-            label: Additional Directives
+            label: Scheduler Directives
             type: editor
-            tooltip: Additional PBS directives (include #PBS prefix)
-            optional: true
-            ignore: ${{ inputs.submit_to_scheduler != true || inputs.resource.schedulerType != 'pbs' }}
+            tooltip: Type the PBS scheduler directives
       
       runmode:
         label: Container Type
