--- a/yamls/emed.yaml
+++ b/yamls/emed.yaml
@@ -637,8 +637,9 @@ jobs:
             gres_gpu_default: ${{ inputs.vllm.num_gpus }}
             gres_gpu_hpc4: ${{ inputs.vllm.num_gpus }}
             time: ${{ inputs.slurm.time }}
-            scheduler_directives: ${{ inputs.slurm.scheduler_directives }}
-              module load singularity || module load apptainer
+            scheduler_directives: |
+                ${{ inputs.slurm.scheduler_directives }}
+                module load singularity || module load apptainer
           pbs:
             is_disabled: ${{ inputs.resource.schedulerType != 'pbs' || inputs.submit_to_scheduler == false }}
             scheduler_directives: ${{ inputs.pbs.scheduler_directives }}
